--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1> Hi I'm Vishnupriya</h1>
       <h2>"Empowering Technology with Innovation and Insight</h2>
-      <a href="about.html" class="btn-about">About Me</a>
+      <a href="#about" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
 <!-- ======= About Section ======= -->
